src/components/MeteoHurley.css
.forecast-info {
  /* display: grid;
    grid-template-columns: repeat(auto-fill, minmax(20%, 1fr)); */
  display: flex;
  /* flex-wrap: wrap; */
  gap: 1rem;
  overflow-x: auto;
  padding: 0.5rem;
  .forecast-hour {
    min-width: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    .forecast-hour__time {
      font-size: 0.75rem;
      margin-bottom: 0.5rem;
    }
    .forecast-hour__temp {
      font-weight: 500;
    }
    .forecast-hour__icon {
      display: block;
      width: 30px;
    }
  }
}

